# cashiersync-python

./: .gitignore  README.md  distribute.cmd  distribute.sh  main.py  pyproject.toml  requirements.txt  run.cmd  setup.py
cashiersync/: app.py  config.py  config2.py  config_default.yaml  executor.py  ledger_exec.py  ledger_output_parser.py  lots_parser.py  main.py  model.py  pexpect_executor.py.bak  sec_details.py  transactions.py
manual-tests/: tests.rest
tests/: test_app.py  test_parser.py
