[project]
name = "cashiersync"
version = "3.0.6"
description = "Server-side Ledger-cli synchronization component for Cashier"
authors = [
    { name = 'Alen Siljak' },
]
readme = 'README.md'
requires-python = ">=3.12"
dependencies = ['fastapi', 'pexpect', 'pyxdg', 'strip-ansi', 'tomli', 'uvicorn', ]
license = { file = "LICENSE" }
keywords = ['cashier', 'finance', 'portfolio', 'ledger-cli']
classifiers = [
        "Development Status :: 4 - Beta",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Environment :: Other Environment",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
        "Operating System :: OS Independent",
        "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = 'https://github.com/alensiljak/cashiersync-python'
